<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newtask.TaskGuideActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_task_guide"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_title"
                android:src="@drawable/ic_outline_shopping_cart"/>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/task_search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                android:background="@color/dark_gray"/>

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/task_search_view">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_task_cleaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAlignment="center"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/task_cleaning"
                    app:checkedIconEnabled="false"
                    app:checkedIconVisible="false"
                    app:closeIconVisible="false"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_task_dish_washing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAlignment="center"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/task_dish_washing"
                    app:checkedIconEnabled="false"
                    app:checkedIconVisible="false"
                    app:closeIconVisible="false"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_task_bathroom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAlignment="center"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/task_bathroom"
                    app:checkedIconEnabled="false"
                    app:checkedIconVisible="false"
                    app:closeIconVisible="false"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_task_laundry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAlignment="center"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/task_laundry"
                    app:checkedIconEnabled="false"
                    app:checkedIconVisible="false"
                    app:closeIconVisible="false"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_task_waste_sorting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAlignment="center"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/task_waste_sorting"
                    app:checkedIconEnabled="false"
                    app:checkedIconVisible="false"
                    app:closeIconVisible="false"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_task_tidy_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAlignment="center"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/task_tidy_up"
                    app:checkedIconEnabled="false"
                    app:checkedIconVisible="false"
                    app:closeIconVisible="false"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_task_etc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:textAlignment="center"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:text="@string/task_etc"
                    app:checkedIconEnabled="false"
                    app:checkedIconVisible="false"
                    app:closeIconVisible="false"/>

            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/task_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>